--- a/about.html
+++ b/about.html
@@ -8,6 +8,11 @@
   <body>
   <p class ="lightblue">
       Pusheen is a cat on the Internet.
+      Cats are cool
+      ...
+      ...
+      ...
+      Dogs are better
     </p>
   
   </body>
