--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
 
 <header>
-  <img src="imgs/pusheenburger.jpg" alt="big cookie">
+  <img src="imgs/pusheenburger.jpg" alt="big burger">
 </header>
 
 
-<!-- MINI CARDS BRIEFLY DESCRIBING EACH COOKIE -->
-<section class="cookie-cards">
+<!-- MINI CARDS BRIEFLY DESCRIBING EACH burger -->
+<section class="burger-cards">
   <div class="card">
       <h3> Cajun Shrimp Burger </h3>
       <img src="imgs/cajun-shrimp-burger.jpg" alt>
