--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <ul>
     <li> <a href="#"> Home </a></li>
     <li> <a href="about.html"> About </a></li>
-    <li> <a href="#"> BUY! </a></li>
+    <li> <a href="https://www.smokehouse.com/burgers.nsf/item/steakburgers"> BUY! </a></li>
   </ul>
 </nav>
 
