edited nav bar in index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <nav>
   <h1>My Favorite Burgers</h1>
   <ul>
-    <li> <a href="#"> Home </a></li>
+    <li> <a href="index.html"> Home </a></li>
     <li> <a href="about.html"> About </a></li>
     <li> <a href="buy.html"> BUY! </a></li>
   </ul>
